[gd_scene load_steps=4 format=3 uid="uid://behrceg6tb7ns"]

[ext_resource type="Script" path="res://addons/2d_essentials/update/download_update_panel.gd" id="1_ib7xt"]
[ext_resource type="Texture2D" uid="uid://bvior2tib26b3" path="res://addons/2d_essentials/icons/Godot-2D-Essentials-Title.png" id="2_xiwd4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43ky8"]

[node name="DownloadUpdatePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ib7xt")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_xiwd4")

[node name="VersionReleaseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="DownloadVersionButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Download and install update"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="ReadReleaseNotesButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxEmpty_43ky8")
text = "Read release notes..."

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DownloadVersionButton" to="." method="_on_download_version_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/ReadReleaseNotesButton" to="." method="_on_read_release_notes_button_pressed"]
